# dumbado

./: .anjuta_sym_db.db  ChangeLog  Makefile.am  Makefile.am.bak  Makefile.in  NEWS  README  TODO.tasks  aclocal.m4  configure  configure.ac  configure.ac.bak
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  dumbado
Debug/src/.deps/: callbacks.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dumbado_nogui/: .anjuta_sym_db.db  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO.tasks  config.h  config.status  configure  configure.ac  libtool
dumbado_nogui/.anjuta/: default.profile
dumbado_nogui/.anjuta/session/: anjuta.session  dock-layout.xml
dumbado_nogui/Debug/: Makefile  config.h  config.status  libtool
dumbado_nogui/Debug/po/: Makefile  Makefile.in  POTFILES
dumbado_nogui/Debug/src/: Makefile
dumbado_nogui/Debug/src/.deps/: main.Po
dumbado_nogui/autom4te.cache/: output.0  output.1  traces.0  traces.1
dumbado_nogui/po/: Makefile  Makefile.in
dumbado_nogui/src/: Makefile  Makefile.am  Makefile.in  dumbado_nogui  main.c
dumbado_nogui/src/.deps/: main.Po
src/: Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c  callbacks.c~  callbacks.h  callbacks.h~  dumbado.glade  main.c  main.c~
