## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g\
	 -lpcap

bin_PROGRAMS = dumbado_nogui

dumbado_nogui_SOURCES = \
	main.c

dumbado_nogui_LDFLAGS = 

dumbado_nogui_LDADD = 

